# HachimoDock

./: .folder.md  .gitattributes  .gitignore  AGENTS.md  AUTHORS  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  LICENSE.md  README.en.md  README.md  open-manager.bat  today.md
.cursor/: .folder.md
.cursor/rules/: README.md  loading-index.md  tech-stack.md  workspace-structure.md
.github/: copilot-instructions.md
board-runtime/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEPLOY.md  IMPLEMENTATION_CHECKLIST.md  README.md  board-ap-down.sh  board-ap-up.sh  board-audio-bridge.sh  board-factory-reset.sh  board-network-watchdog.sh  board-runtime-rpi.env  board-runtime-rpi.service  board-runtime.init  board-selfcheck.sh  board-sound.sh  board-sta-apply.sh  board-voice-ptt.py  board-widget-runtime.py  board-widget-runtime.service  board-wifi-scan.sh  check-runtime.sh  device-config.json  fb-device.sh  fb-display.sh  fb-rawvideo-blit.py  fb-stats-renderer.py  install.sh  manifest.json  start-rpi.sh  start.sh  terrier-clips-durations.tsv  usb-gadget-setup.sh
board-runtime/builtin-clawpkgs/drink-reminder/: component.json  share.json
board-runtime/builtin-clawpkgs/drink-reminder/runtime/: widget.json
board-runtime/builtin-clawpkgs/slack-off-countdown/: share.json
board-runtime/builtin-clawpkgs/token-usage/: component.json  share.json
board-runtime/builtin-clawpkgs/tomato-clock/: buttons.json  share.json
board-runtime/builtin-clawpkgs/tomato-clock/runtime/: widget.json
board-runtime/docs/: component-dashboard-v1.md  device-runtime-design.md  screen-state-machine.md  security-hardening.md  session-state-machine.md  stats-page.md
board-runtime/docs/superpowers/plans/: 2026-05-23-component-dashboard-v1-device.md
board-runtime/docs/superpowers/specs/: 2026-05-25-widget-runtime-design.md
board-runtime/scripts/: configure-radxa-a733-spi-lcd.ps1  deploy-radxa-a733.ps1  deploy-radxa-a733.sh  deploy-rpi.sh  reset-to-ap.sh  serial-exec.py  stage-to-sdcard-rpi.sh
board-runtime/scripts/legacy-t113/: README.md  build-armhf.sh  deploy-armhf.sh  serial-deploy-update.py  stage-to-sdcard.sh
board-runtime/src/: board_rotary_input.c  board_serial_bridge.c  board_server.c  board_touch_input.c  fb_speech_overlay.c  rotary_decoder.c  rotary_decoder.h  runtime_common.c  runtime_common.h  runtime_debug.c  runtime_debug.h  runtime_json.c  runtime_json.h  runtime_mqtt.c  runtime_mqtt.h  runtime_pairing.c  runtime_pairing.h  runtime_protocol.c  runtime_protocol.h  runtime_session_state.c  runtime_session_state.h  runtime_stats.c  runtime_stats.h  runtime_usb_serial.c  runtime_usb_serial.h  runtime_wifi.c  runtime_wifi.h  screen_page.c  screen_page.h  touch_gesture.c  touch_gesture.h  voice_button.c  voice_button.h
board-runtime/tests/: asset_transaction_tests.c  deploy_rpi_sudo_password.test.js  fb_device_resolver_tests.sh  fb_display_selftest.py  fb_speech_overlay_layout_tests.c  fb_stats_renderer_test.py  pet_animation_config_test.js  pet_ui_logic_tests.js  remote_binding_availability_policy.test.js  rotary_decoder_tests.c  rpi_pairing_ap_config_test.py  runtime_core_tests.c  runtime_tests.c  runtime_wifi_tests.c  start_rpi_transport_policy.test.js  widget_builtin_contract_test.py
board-runtime/toolchains/: rpi-arm64.cmake  rpi-armhf.cmake
board-runtime/ui/: pairing-portal.html
board-runtime/ui/shared/: board-desktop-api.js  tauri-compat.js
board-runtime/ui/windows/main/: detail-runtime-stats.js  detail-view.js  dialogue-tray.css  dialogue-tray.js  index.html  main-view-models.js  pet-animation-config.js  pet-animation-controller.js  pet-lifecycle-resolver.js  pet-vitals.js  websocket-bridge.js
docs/: .folder.md  desktop-packaging.md  developer-setup_zh_Hans.md  hardware-reproduction.en.md  hardware-reproduction.md  open-source-compliance-prep.md  pet-claw-lite-admin.md  t113-pet-screen.md  ui-style-guide.md  user-guide.en.md  user-guide.md  voice-architecture.md
docs/superpowers/: .folder.md
docs/superpowers/plans/: 2026-05-06-active-agent-follow.md  2026-05-22-functional-component-pipeline.md  2026-05-23-clawpkg-usb-ota.md  2026-05-26-plan-1-shared-shell.md  2026-05-26-plan-2-device-dashboard.md  2026-05-26-plan-3-appearance-gallery.md  2026-05-26-plan-4-component-center.md
ref/: .folder.md  README.md  index.html  package-lock.json  package.json  vite.config.js
ref/src/: .folder.md  App.jsx  AppearanceDetail.jsx  AppearanceDetail.test.js  AppearanceGallery.jsx  AppearanceGallery.test.js  AppearancePreview.jsx  ChannelSwitchConfirmModal.jsx  CommunityImportHelp.jsx  ComponentCenter.jsx  ComponentCenter.test.js  CustomAvatarWizard.jsx  CustomAvatarWizard.test.js  DeviceDashboard.jsx  DeviceDashboard.test.js  DeviceGuideModal.jsx  DeviceGuideModal.test.js  DeviceSetup.jsx  DeviceSetup.test.js  HelpTooltip.jsx  ProductExperience.test.js  agent-discovery-contract.js  bridge-device-runtime.js  channel-runtime.js  device-setup-contract.js  device-setup-state.js  device-setup-state.test.js  fixtures.js  main.jsx  styles.css  usb-serial-widget-ota.test.js
ref/src-tauri/: Cargo.toml  build.rs  bundle-secrets.env.example  tauri.conf.json
ref/src-tauri/bridge/: package-lock.json  package.json
ref/src-tauri/bridge/agents/: claude-code.js  claude-log-monitor.js  codebuddy.js  codex-log-monitor.js  codex.js  copilot-cli.js  cursor-agent.js  gemini-cli.js  registry.js
ref/src-tauri/bridge/hooks/: clawd-hook.js  codebuddy-hook.js  codex-remote-monitor.js  copilot-hook.js  cursor-hook.js  gemini-hook.js  install.js  process-tree.js
ref/src-tauri/bridge/runtime/: node
ref/src-tauri/bridge/test/: claude-log-monitor.test.js  headless-mqtt-active-resolver.test.js
ref/src-tauri/capabilities/: default.json
ref/src-tauri/icons/: icon.icns
ref/src-tauri/src/: clawpkg.rs  codex_import.rs  lib.rs  main.rs  usb_serial.rs
ref/src/dashboard/: .folder.md  (+15 more)
scripts/: .folder.md  dev-mqtt-broker.js  docs-check.sh  open-manager.ps1  pack-builtin-clawpkgs.js  start-hachimo-link.ps1  watch-remote-cli-mqtt.cjs
skills/: .folder.md
skills/petAgent-ui-generator/: SKILL.md
(+101 files in other folders)
